force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <label>Propriété</label>
    <nameField>
        <displayFormat>PROP-{00000}</displayFormat>
        <label>Numéro de propriété</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propriétés</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>