force-app/main/default/objects/Property__c/fields/Additional_part__c.field-meta.xml
<CustomField>
    <fullName>Additional_part__c</fullName>
    <label>Partie additionnelle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>