force-app/main/default/objects/Property__c/fields/Area_in_agricultural_zone__c.field-meta.xml
<CustomField>
    <fullName>Area_in_agricultural_zone__c</fullName>
    <label>Superficie en zone agricole</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>