force-app/main/default/objects/Property__c/fields/Assessment_date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_date__c</fullName>
    <label>Date d&apos;évaluation</label>
    <type>Date</type>
</CustomField>