force-app/main/default/objects/Property__c/fields/Assessment_roll_year__c.field-meta.xml
<CustomField>
    <fullName>Assessment_roll_year__c</fullName>
    <label>Année du rôle d&apos;évaluation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>