force-app/main/default/objects/Property__c/fields/Borough_number__c.field-meta.xml
<CustomField>
    <fullName>Borough_number__c</fullName>
    <label>Numéro d&apos;arrondissement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>