force-app/main/default/objects/Property__c/fields/Building_number__c.field-meta.xml
<CustomField>
    <fullName>Building_number__c</fullName>
    <label>Numéro de bâtiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>