force-app/main/default/objects/Property__c/fields/Building_value__c.field-meta.xml
<CustomField>
    <fullName>Building_value__c</fullName>
    <label>Valeur du bâtiment</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>