force-app/main/default/objects/Property__c/fields/Cardinal_point_code__c.field-meta.xml
<CustomField>
    <fullName>Cardinal_point_code__c</fullName>
    <label>Code point cardinal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>