force-app/main/default/objects/Property__c/fields/Case_number__c.field-meta.xml
<CustomField>
    <fullName>Case_number__c</fullName>
    <label>Numéro de dossier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>