force-app/main/default/objects/Property__c/fields/Check_digit__c.field-meta.xml
<CustomField>
    <fullName>Check_digit__c</fullName>
    <label>Chiffre de vérification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>