force-app/main/default/objects/Property__c/fields/Code_of_registration_conditions__c.field-meta.xml
<CustomField>
    <fullName>Code_of_registration_conditions__c</fullName>
    <label>Code conditions d&apos;inscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>