force-app/main/default/objects/Property__c/fields/Construction_type__c.field-meta.xml
<CustomField>
    <fullName>Construction_type__c</fullName>
    <label>Type de construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>