force-app/main/default/objects/Property__c/fields/Construction_year__c.field-meta.xml
<CustomField>
    <fullName>Construction_year__c</fullName>
    <label>Année de construction</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>