force-app/main/default/objects/Property__c/fields/Discriminant_X_Y__c.field-meta.xml
<CustomField>
    <fullName>Discriminant_X_Y__c</fullName>
    <label>Discriminant X,Y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>