force-app/main/default/objects/Property__c/fields/Floor_area__c.field-meta.xml
<CustomField>
    <fullName>Floor_area__c</fullName>
    <label>Superficie d&apos;étage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>