force-app/main/default/objects/Property__c/fields/Geographic_code__c.field-meta.xml
<CustomField>
    <fullName>Geographic_code__c</fullName>
    <label>Code géographique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>