force-app/main/default/objects/Property__c/fields/Higher_number__c.field-meta.xml
<CustomField>
    <fullName>Higher_number__c</fullName>
    <label>Numéro supérieur</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>