force-app/main/default/objects/Property__c/fields/Higher_number_letter__c.field-meta.xml
<CustomField>
    <fullName>Higher_number_letter__c</fullName>
    <label>Lettre numéro supérieur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>