force-app/main/default/objects/Property__c/fields/How_code__c.field-meta.xml
<CustomField>
    <fullName>How_code__c</fullName>
    <label>Code comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>