force-app/main/default/objects/Property__c/fields/Indication_of_vacant_land__c.field-meta.xml
<CustomField>
    <fullName>Indication_of_vacant_land__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indication terrain vague</label>
    <type>Checkbox</type>
</CustomField>