force-app/main/default/objects/Property__c/fields/Industrial_building_code__c.field-meta.xml
<CustomField>
    <fullName>Industrial_building_code__c</fullName>
    <label>Code bâtiment industriel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>