force-app/main/default/objects/Property__c/fields/Land_area__c.field-meta.xml
<CustomField>
    <fullName>Land_area__c</fullName>
    <label>Superficie du terrain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>