force-app/main/default/objects/Property__c/fields/Land_value__c.field-meta.xml
<CustomField>
    <fullName>Land_value__c</fullName>
    <label>Valeur du terrain</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>