force-app/main/default/objects/Property__c/fields/Linear_dimension__c.field-meta.xml
<CustomField>
    <fullName>Linear_dimension__c</fullName>
    <label>Dimension linéaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>