force-app/main/default/objects/Property__c/fields/Link_code__c.field-meta.xml
<CustomField>
    <fullName>Link_code__c</fullName>
    <label>Code de lien</label>
    <length>255</length>
    <type>Text</type>
</CustomField>