force-app/main/default/objects/Property__c/fields/Lower_number__c.field-meta.xml
<CustomField>
    <fullName>Lower_number__c</fullName>
    <label>Numéro inférieur</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>