force-app/main/default/objects/Property__c/fields/lower_number_letter__c.field-meta.xml
<CustomField>
    <fullName>lower_number_letter__c</fullName>
    <label>Lettre numéro inférieur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>