force-app/main/default/objects/Property__c/fields/Maximum_taxed_area__c.field-meta.xml
<CustomField>
    <fullName>Maximum_taxed_area__c</fullName>
    <label>Superficie maximale taxée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>