force-app/main/default/objects/Property__c/fields/Neighborhood_unit_number__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_unit_number__c</fullName>
    <label>Numéro unité de voisinage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>