force-app/main/default/objects/Property__c/fields/Non_residential_building_code__c.field-meta.xml
<CustomField>
    <fullName>Non_residential_building_code__c</fullName>
    <label>Code bâtiment non résidentiel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>