force-app/main/default/objects/Property__c/fields/Number_of_floors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_floors__c</fullName>
    <label>Nombre d&apos;étages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>