force-app/main/default/objects/Property__c/fields/Physical_link_code__c.field-meta.xml
<CustomField>
    <fullName>Physical_link_code__c</fullName>
    <label>Code lien physique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>