force-app/main/default/objects/Property__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Code postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>