force-app/main/default/objects/Property__c/fields/Predominant_use__c.field-meta.xml
<CustomField>
    <fullName>Predominant_use__c</fullName>
    <label>Utilisation prédominante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>