force-app/main/default/objects/Property__c/fields/Previous_building_value__c.field-meta.xml
<CustomField>
    <fullName>Previous_building_value__c</fullName>
    <label>Valeur précédente du bâtiment</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>