force-app/main/default/objects/Property__c/fields/Property_value__c.field-meta.xml
<CustomField>
    <fullName>Property_value__c</fullName>
    <label>Valeur de la propriété</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>