force-app/main/default/objects/Property__c/fields/Room_number__c.field-meta.xml
<CustomField>
    <fullName>Room_number__c</fullName>
    <label>Numéro de local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>