force-app/main/default/objects/Property__c/fields/Street_name__c.field-meta.xml
<CustomField>
    <fullName>Street_name__c</fullName>
    <label>Nom de la rue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>