force-app/main/default/objects/Property__c/fields/Street_type_code__c.field-meta.xml
<CustomField>
    <fullName>Street_type_code__c</fullName>
    <label>Code type de rue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>