force-app/main/default/objects/Property__c/fields/Total_area__c.field-meta.xml
<CustomField>
    <fullName>Total_area__c</fullName>
    <label>Superficie totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>