force-app/main/default/objects/Property__c/fields/Total_number_of_rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_rooms__c</fullName>
    <label>Nombre total de chambres</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>