force-app/main/default/objects/Property__c/fields/Zone_number__c.field-meta.xml
<CustomField>
    <fullName>Zone_number__c</fullName>
    <label>Numéro de zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>